<resources>
    <string name="app_name">BAKE&amp;GO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="en_bake_go_encuentras_postres_caseros_listos_para_ti_haz_clic_en_comenzar_y_date_un_gusto">En Bake-Go encuentras postres caseros listos para ti. Haz clic en comenzar y date un gusto.</string>
    <string name="comenzar">Comenzar</string>
    <string name="registrate">Registrate</string>
    <string name="bake_go"><![CDATA[BAKE&GO]]></string>
    <string name="inicio_de_sesion">Inicio de Sesion</string>
    <string name="ingresa_tu_correo">Ingresa tu correo</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu contraseña</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="recupera_tu_contrase_a">Recupera tu contraseña</string>
    <string name="ingresa_con_google">Ingresa con google</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="registrate_login">Registrate</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">correo</string>
    <string name="direccion">Direccion</string>
    <string name="he_leido_y_acepto_los">He leido y acepto los</string>
    <string name="contrase_a">contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="terminos_y_condiciones">Terminos y condiciones</string>
    <string name="registrarse">Registrarse</string>
    <string name="terminos_y_condiciones_titulo">TERMINOS Y CONDICIONES</string>
    <string name="ultima_actualizacion_05_09_2025">Ultima actualizacion: 05/09/2025</string>
    <string name="bienvenido_a_bake_go_al_acceder_y_utilizar_nuestra_aplicacion_aceptas_los_siguientes_terminos_y_condiciones_te_recomendamos_leerlos_cuidadosamente_antes_de_continuar"><![CDATA[Bienvenido a BAKE&GO. Al acceder y utilizar nuestra aplicacion, aceptas los siguientes terminos y condiciones. Te recomendamos leerlos cuidadosamente antes de continuar.]]></string>
    <string name="tu_informaci_n_ser_tratada_con_confidencialidad_y_no_ser_compartida_con_terceros_sin_tu_consentimiento_al_registrarte_confirmas_que_los_datos_ingresados_son_ver_dicos_y_que_eres_mayor_de_edad_para_m_s_detalles_consulta_la_versi_n_completa_en_nuestro_sitio_web_o_cont_ctanos_directamente_desde_la_app">Tu información será tratada con confidencialidad y no será compartida con terceros sin tu consentimiento. Al registrarte, confirmas que los datos ingresados son verídicos y que eres mayor de edad. Para más detalles, consulta la versión completa en nuestro sitio web o contáctanos directamente desde la app.</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="recuperaci_n_de_contrase_a">Recuperación de contraseña</string>
    <string name="olvidaste_tu_contrase_a">Olvidaste tu contraseña?</string>
    <string name="ingresa_un_correo_electronico_para_enviarte_un_codigo_de_recuperaci_n">Ingresa un correo electronico para enviarte un codigo de recuperación</string>
    <string name="enviar_codigo">ENVIAR CODIGO</string>
    <string name="explora_nuestros_productos_y_haz_tu_pedido">Explora nuestros productos y haz tu pedido</string>
    <string name="mi_perfil">MI PERFIL</string>
    <string name="nombre_perf">NOMBRE:</string>
    <string name="apellido">APELLIDO:</string>
    <string name="correo_perf">CORREO:</string>
    <string name="telefono_perf">TELEFONO:</string>
    <string name="dirreccion">DIRRECCION:</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="tus_pedidos">TUS PEDIDOS</string>
    <string name="edicion_de_perfil">EDICION DE PERFIL</string>
    <string name="cambiar_contrase_a">cambiar contraseña</string>
    <string name="guardar">GUARDAR</string>
    <string name="tus_pedidos_titulo">TUS PEDIDOS</string>
    <string name="a_adir_al_carrito">Añadir al carrito</string>
    <string name="comprar">COMPRAR</string>
    <string name="total">TOTAL:$$$$</string>
    <string name="vigila_tu_pedido">Vigila tu pedido</string>
    <string name="confirmacion_de_datos">Confirmacion de datos</string>
    <string name="nombre_conf">NOMBRE:</string>
    <string name="apellido_conf">APELLIDO:</string>
    <string name="correo_conf">CORREO:</string>
    <string name="telefono_conf">TELEFONO:</string>
    <string name="direccion_conf">DIRECCION:</string>
    <string name="medios_de_pago">Medios de pago</string>
    <string name="lapiz_xd">.</string>
    <string name="tarjeta_credito">TARJETA CREDITO:</string>
    <string name="tarjeta_debito">TARJETA DEBITO:</string>
    <string name="pse">PSE:</string>
    <string name="contraentrega">CONTRAENTREGA:</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="estado">ESTADO:</string>
    <string name="telefono_vigi">TELEFONO:</string>
    <string name="direccion_vigi">DIRECCION:</string>
    <string name="tiempo_de_espera">TIEMPO DE ESPERA:</string>
    <string name="c_u">$$$$$$ c/u</string>
    <string name="gelatina_mosaico">GELATINA MOSAICO:</string>
    <string name="postre_de_fresa">POSTRE DE FRESA:</string>
    <string name="c_u_3">$$$$$$ c/u</string>
    <string name="postre_de_limon">POSTRE DE LIMON:</string>
    <string name="c_u_2">$$$$$$ c/u</string>
    <string name="gestion_aplicativo">GESTION APLICATIVO</string>
    <string name="gestionar_usuarios">GESTIONAR USUARIOS</string>
    <string name="gestionar_productos">GESTIONAR PRODUCTOS</string>
    <string name="ir_al_perfil">ir al perfil</string>
    <string name="gestion_usuarios">GESTION USUARIOS</string>
    <string name="ver_usuario">VER USUARIO</string>
    <string name="editar_usuario">EDITAR USUARIO</string>
    <string name="eliminar_usuario">ELIMINAR USUARIO</string>
    <string name="gestion_de_productos">GESTION DE PRODUCTOS</string>
    <string name="ver_producto">VER PRODUCTO</string>
    <string name="editar_producto">EDITAR PRODUCTO</string>
    <string name="eliminar_producto">ELIMINAR PRODUCTO</string>
    <string name="a_adir_producto">AÑADIR PRODUCTO</string>
    <string name="ver_usuarios">VER USUARIOS</string>
    <string name="ir_atras">ir atras</string>
    <string name="editar_usuarios">EDITAR USUARIOS</string>
    <string name="eliminar_usuarios">ELIMINAR USUARIOS</string>
    <string name="no_hay_pedidos_aun">no hay pedidos aun</string>
    <string name="boton_de_editar_datos">Boton de editar datos</string>
    <string name="producto_anadido_carrito">%s añadido al carrito!</string>
    <string name="redireccion_al_perfil">redireccion al perfil</string>
    <string name="_3000_00">3000.00</string>
    <string name="_5500_00">5500.00</string>
    <string name="_4250_00">4250.00</string>
    <string name="editar_producto_xd">EDITAR PRODUCTO</string>
    <string name="eliminar_usuarios_XD">ELIMINAR USUARIOS</string>
    <string name="ver_productoXD">VER PRODUCTO</string>
    <string name="eliminar_productoxd">ELIMINAR PRODUCTO</string>
    <string name="a_adir_productoXD">AÑADIR PRODUCTO</string>
    <string name="visible">Visible</string>
    <string name="precio">precio</string>
    <string name="descripcion">descripcion</string>
    <string name="cantidad">cantidad</string>
    <string name="producto">producto</string>
    <string name="imagen_del_producto">imagen del producto</string>
    <string name="id">id</string>
    <string name="nombre_producto_id">nombre producto id</string>
    <string name="producto_x">Producto #X</string>
    <string name="producto_xdddd">Producto #</string>
    <string name="y">Y</string>
    <string name="nombre_usuario_id">nombre usuario id</string>
    <string name="usuario">Usuario #</string>
    <string-array name="opciones_visible">
        <item>Visible</item>
        <item>Oculto</item>
    </string-array>
</resources>