<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:fillViewport="true"
    tools:context=".Fragments.ConfirmacionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="28dp"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/ic_back_confirmacion"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="start"
            android:contentDescription="Botón de retroceso"
            android:padding="8dp"
            android:src="@drawable/ic_flecha_atras"
            app:tint="@color/black" />
        <TextView
            android:id="@+id/nom_app_Confirmacion"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kavoon"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="55sp" />

        <TextView
            android:id="@+id/Titulo_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/kavoon"
            android:text="@string/confirmacion_de_datos"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/nom_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/kadwa"
            android:text="@string/nombre_conf"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ape_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/kadwa"
            android:text="@string/apellido_conf"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/corr_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/kadwa"
            android:text="@string/correo_conf"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tel_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/kadwa"
            android:text="@string/telefono_conf"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">

            <TextView
                android:id="@+id/dire_conf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/kadwa"
                android:text="@string/direccion_conf"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btn_edit_conf"
                android:layout_width="56dp"
                android:layout_height="53dp"
                android:backgroundTint="@color/amarillo"
                android:contentDescription="@string/boton_de_editar_datos"
                android:src="@drawable/ic_lapiz"
                android:layout_marginStart="16dp"
                android:scaleType="centerInside"
                android:padding="12dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/Titulo2_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/kavoon"
            android:text="@string/medios_de_pago"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/rg_medios_pago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_credito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kadwa"
                android:text="@string/tarjeta_credito"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rb_debito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/kadwa"
                android:text="@string/tarjeta_debito"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rb_pse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/kadwa"
                android:text="@string/pse"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rb_contraentrega"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/kadwa"
                android:text="@string/contraentrega"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RadioGroup>
        <Button
            android:id="@+id/btn_conf_datos"
            android:layout_width="312dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/amarillo"
            android:fontFamily="@font/kadwa"
            android:text="@string/confirmar"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>