<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/Nom_App"
            android:layout_width="236dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/kavoon"
            android:text="@string/bake_go"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/Titulo_login"
            android:layout_width="200dp"
            android:layout_height="34dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/kavoon"
            android:text="@string/inicio_de_sesion"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/correo_ini"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/bordes_redondos"
            android:ems="10"
            android:fontFamily="@font/kadwa"
            android:hint="@string/ingresa_tu_correo"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/pass_ini"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bordes_redondos"
            android:ems="10"
            android:hint="@string/ingresa_tu_contrase_a"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button"
            android:layout_width="295dp"
            android:layout_height="65dp"
            android:layout_marginTop="56dp"
            android:backgroundTint="@color/amarillo"
            android:fontFamily="@font/kadwa"
            android:text="@string/iniciar_sesion"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/link_recpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/kadwa"
            android:text="@string/recupera_tu_contrase_a"
            android:textAlignment="center"
            android:textColor="@color/amarillo"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="295dp"
            android:layout_height="65dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/kadwa"
            android:text="@string/ingresa_con_google"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kadwa"
                android:text="@string/no_tienes_cuenta"
                android:textColor="@color/black"
                android:layout_marginEnd="4dp" />

            <TextView
                android:id="@+id/Link_regis_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kadwa"
                android:text="@string/registrate_login"
                android:textColor="@color/amarillo" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>