<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:fillViewport="true"
    tools:context=".Fragments.VigilarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="28dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/nom_app_Vigilar"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kavoon"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="55sp"/>

        <TextView
            android:id="@+id/titulo_vigilar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/kavoon"
            android:text="@string/vigila_tu_pedido"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/est_vigilar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/kadwa"
            android:text="@string/estado"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tel_vigilar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/kadwa"
            android:text="@string/telefono_vigi"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/dire_vigilar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/kadwa"
            android:text="@string/direccion_vigi"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/time_vigilar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/kadwa"
            android:text="@string/tiempo_de_espera"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>
</ScrollView>